# rust-resource

./: Cargo.toml  LICENSE  README.md
rresource/: Cargo.toml
rresource/src/: lib.rs
rresource_derive/: Cargo.toml
rresource_derive/src/: lib.rs
rust-resource/: Cargo.toml
rust-resource/src/: main.rs  resource.rs
src/: main.rs  resource.rs
