[package]
name = "rust-resource"
version = "0.1.0"
authors = ["Nicola De Simone <nicola.ds87@gmail.com>"]
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1.18"
futures = "0.1"
reqwest = "0.9.15"
hello_macro = { path = "/Users/nicoladesimone/dev/rust/hello_macro" }
rresource_derive = { path = "../rresource_derive" }
rresource = { path = "../rresource" }
